برای اضافه کردن آیتم به لیست از طریق چی کوئری کار می کنیم که ابتدا باید آی دی محصول و مشخصاتش رو داشته باشیتم پاس بدیم به چی کوئری <a class="cart-btn" onclick="addToCart('@Model.Product.Id', '@Model.Product.Name', '@Model.Product.DoublePrice', '@Model.Product.Picture')">                                                     <i class="ion-bag"></i> افزودن به سبد خرید   </a> بعد از نوشتن جی کوئری مربوط به سبد خرید که در مسیر  ~/Theme/assets/js/custom.js است باید چند فایل دیگه رو هم به لیوت اضافه کنیم . 1)<script src="~/Theme/assets/js/custom.js"></script> 2)<script src="~/lib/jquery/dist/jquery.min.js"></script> 3)اضافه کردن پلاگین به مسیر Theme/assets/js/ که در واقع یک پلاگین هست برای کار کردن با کوکی <script src="~/Theme/assets/js/plugins.js"></script> که این پلاگین حتما باید قبل از کاستوم باشد. به این شکل نحوع قرارگیری آنها در لیوت     <script src="~/lib/jquery/dist/jquery.min.js"></script>     <script src="~/Theme/assets/js/plugins.js"></script>     <script src="~/Theme/assets/js/custom.js"></script> می شود کد های جی کوئری را تریس کرد با کلمه کلیدی     debugger; و امکانانت موجود در مرورگر

--- a/LampShade/ServiceHost/Pages/Shared/_Layout.cshtml
+++ b/LampShade/ServiceHost/Pages/Shared/_Layout.cshtml
@@ -27,14 +27,14 @@
 
 <body>
     <!--====================  header area ====================-->
-       @await Component.InvokeAsync("Menu")
-<!--====================  End of header area  ====================-->
+    @await Component.InvokeAsync("Menu")
+    <!--====================  End of header area  ====================-->
 
-                  @RenderBody()
+    @RenderBody()
 
-<!--====================  footer area ====================-->
-@await Component.InvokeAsync("Footer")
-<!--====================  End of footer area  ====================-->
+    <!--====================  footer area ====================-->
+    @await Component.InvokeAsync("Footer")
+    <!--====================  End of footer area  ====================-->
 
 
 
@@ -66,8 +66,11 @@
     <!-- Vendor JS -->
     <script src="~/Theme/assets/js/vendors.js"></script>
 
-    <!-- Active JS -->
-    <script src="~/Theme/assets/js/active.js"></script>
+<!-- Active JS -->
+                <script src="~/lib/jquery/dist/jquery.min.js"></script>
+                <script src="~/Theme/assets/js/active.js"></script>
+                <script src="~/Theme/assets/js/plugins.js"></script>
+                <script src="~/Theme/assets/js/custom.js"></script>
 
 </body>
 
