--- a/LampShade/ServiceHost/Pages/Product.cshtml
+++ b/LampShade/ServiceHost/Pages/Product.cshtml
@@ -163,14 +163,13 @@
                                             <div class="product-countdown" data-countdown="@Model.Product.DiscountExpireDate"></div>
                                         }
 
-
                                         <div class="product-actions">
                                             <div class="quantity-selection">
                                                 <label>تعداد</label>
                                                 <input type="number" value="1" min="1" id="productCount">
                                             </div>
                                             <div class="product-buttons">
-                                                <a class="cart-btn" onclick="addToCart('@Model.Product.Id', '@Model.Product.Name', '@Model.Product.Price', '@Model.Product.Picture')">
+                                                <a class="cart-btn" onclick="addToCart('@Model.Product.Id', '@Model.Product.Name', '@Model.Product.DoublePrice', '@Model.Product.Picture')">
                                                     <i class="ion-bag"></i> افزودن به سبد خرید
                                                 </a>
                                             </div>
@@ -279,7 +278,7 @@
                                                         <div class="ratings-wrapper">
                                                             <div class="sin-ratings">
                                                                 <div class="rating-author">
-                                                                    <h2>@comment.Name</h2>
+                                                                    <h3>@comment.Name</h3>
                                                                     @*<div class="rating-star">
                                                                             <i class="fa fa-star"></i>
                                                                             <i class="fa fa-star"></i>
@@ -313,7 +312,6 @@
                                                                 <input type="hidden" name="ownerRecordId" value="@Model.Product.Id" />
                                                                 @*<input type="hidden" name="type" value="@CommnetManagement.Infrastructure.EFCore.CommentType.Product" />*@
                                                                 <input type="hidden" name="productSlug" value="@Model.Product.Slug" />
-                                                               
                                                                 <div class="col-12">
                                                                     <input value="ارسال" type="submit">
                                                                 </div>
