آیتم حذف از سبد خرید

--- a/LampShade/ServiceHost/Pages/Cart.cshtml
+++ b/LampShade/ServiceHost/Pages/Cart.cshtml
@@ -69,7 +69,7 @@
                                                 <span>@item.TotalItemPrice.ToMoney()</span>
                                             </td>
                                             <td class="pro-remove">
-                                                <a href="#">
+                                                <a asp-page-handler="RemoveFromCart" asp-route-id="@item.Id">
                                                     <i class="fa fa-trash-o"></i>
                                                 </a>
                                             </td>
