--- a/LampShade/ServiceHost/Pages/Cart.cshtml
+++ b/LampShade/ServiceHost/Pages/Cart.cshtml
@@ -32,56 +32,63 @@
                 <!--=======  page wrapper  =======-->
                 <div class="page-wrapper">
                     <div class="page-content-wrapper">
-                        <form action="#">
-                            <div class="cart-table table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th class="pro-thumbnail">عکس</th>
-                                            <th class="pro-title">محصول</th>
-                                            <th class="pro-price">قیمت واحد</th>
-                                            <th class="pro-quantity">تعداد</th>
-                                            <th class="pro-subtotal">قیمت کل</th>
-                                            <th class="pro-remove">حذف</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                    @foreach (var item in @Model.CartItems)
-                                    {
-                                        <tr>
-                                            <td class="pro-thumbnail">
-                                                <a href="single-product.html">
-                                                    <img src="~/ProductPictures/@item.Picture" class="img-fluid" alt="@item.Name">
-                                                </a>
-                                            </td>
-                                            <td class="pro-title">
-                                                <a href="single-product.html">@item.Name</a>
-                                            </td>
-                                            <td class="pro-price">
-                                                <span>@item.UnitPrice.ToMoney()</span>
-                                            </td>
-                                            <td class="pro-quantity">
-                                                <div class="quantity-selection">
-                                                    <input type="number" value="@item.Count" min="1">
-                                                </div>
-                                            </td>
-                                            <td class="pro-subtotal">
-                                                <span>@item.TotalItemPrice.ToMoney()</span>
-                                            </td>
-                                            <td class="pro-remove">
-                                                <a asp-page-handler="RemoveFromCart" asp-route-id="@item.Id">
-                                                    <i class="fa fa-trash-o"></i>
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    }
+                        @foreach (var item in @Model.CartItems.Where(x => !x.IsInStock))
+                        {
+                         <div class="alert alert-warning" id="@item.Id">
+                            <i class="fa fa-warning"></i> کالای
+                             <strong style=" text-decoration: underline">@item.Name</strong>
+                            در انبار کمتر از تعداد درخواستی موجود است.
+                        </div>
+                        }
+                        <div class="cart-table table-responsive">
+                            <table class="table">
+                                <thead>
+                                <tr>
+                                    <th class="pro-thumbnail">عکس</th>
+                                    <th class="pro-title">محصول</th>
+                                    <th class="pro-price">قیمت واحد</th>
+                                    <th class="pro-quantity">تعداد</th>
+                                    <th class="pro-subtotal">قیمت کل</th>
+                                    <th class="pro-remove">حذف</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                @foreach (var item in @Model.CartItems)
+                                {
+                                    <tr>
+                                        <td class="pro-thumbnail">
+                                            <a href="single-product.html">
+                                                <img src="~/ProductPictures/@item.Picture" class="img-fluid" alt="@item.Name">
+                                            </a>
+                                        </td>
+                                        <td class="pro-title">
+                                            <a href="single-product.html">@item.Name</a>
+                                        </td>
+                                        <td class="pro-price">
+                                            <span>@item.UnitPrice.ToMoney()</span>
+                                        </td>
+                                        <td class="pro-quantity">
+                                            <div class="quantity-selection">
+                                                <input type="number" value="@item.Count" min="1">
+                                            </div>
+                                        </td>
+                                        <td class="pro-subtotal">
+                                            <span>@item.TotalItemPrice.ToMoney()</span>
+                                        </td>
+                                        <td class="pro-remove">
+                                            <a asp-page-handler="RemoveFromCart" asp-route-id="@item.Id">
+                                                <i class="fa fa-trash-o"></i>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                }
 
-                                   
 
-                                    </tbody>
-                                </table>
-                            </div>
-                        </form>
+
+                                </tbody>
+                            </table>
+                        </div>
+
 
                         <div class="row">
                             <div class="col-lg-6 col-12 d-flex">
