--- a/LampShade/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
+++ b/LampShade/ServiceHost/Pages/Shared/Components/Menu/Default.cshtml
@@ -60,7 +60,7 @@
                     <div class="header-icon-wrapper">
                         <ul class="icon-list">
                             <li>
-                                <a href="javascript:void(0)" id="search-overlay-trigger">
+                                <a  id="search-overlay-trigger">
                                     <i class="ion-ios-search-strong"></i>
                                 </a>
                             </li>
