--- a/LampShade/ServiceHost/Pages/Product.cshtml
+++ b/LampShade/ServiceHost/Pages/Product.cshtml
@@ -171,7 +171,7 @@
                                             <div class="product-buttons">
                                                 @if (@Model.Product.IsInStock)
                                                 {
-                                                    <a  class="cart-btn" onclick="addToCart('@Model.Product.Id', '@Model.Product.Name', '@Model.Product.DoublePrice', '@Model.Product.Picture')">
+                                                    <a  class="cart-btn" onclick="addToCart('@Model.Product.Id', '@Model.Product.Name', '@Model.Product.DoublePrice', '@Model.Product.Picture','@Model.Product.Slug')">
                                                         <i class="ion-bag"></i> افزودن به سبد خرید
                                                     </a>
                                                 }
