--- a/LampShade/ServiceHost/Pages/Search.cshtml
+++ b/LampShade/ServiceHost/Pages/Search.cshtml
@@ -75,7 +75,7 @@
                                                             </div>
                                                         }
                                                         <a asp-page="/Product" asp-route-id="@product.Slug">
-                                                            <img src="@product.Picture" class="img-fluid"
+                                                            <img style="height: 160px;" src="~/ProductPictures/@product.Picture" class="img-fluid"
                                                                  alt="@product.PictureAlt" title="@product.PictureTitle">
                                                         </a>
                                                     </div>
