--- a/LampShade/ServiceHost/Pages/CheckOut.cshtml
+++ b/LampShade/ServiceHost/Pages/CheckOut.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
-@using ShopManagement.Application.Contract.Order
 @using _0_Framework.Application
+@using ShopManagement.Application.Contract
 @model ServiceHost.Pages.CheckOutModel
 @{
     ViewData["Title"] = "تایید سبد خرید و پرداخت";
 }
+
 <div class="breadcrumb-area section-space--half">
     <div class="container wide">
         <div class="row">
@@ -14,7 +15,7 @@
                         <h2 class="breadcrumb-content__title">تایید سبد خرید / پرداخت</h2>
                         <ul class="breadcrumb-content__page-map">
                             <li>
-                                <a asp-page="/Index">خانه</a>
+                                <a asp-page="./Index">صفحه اصلی</a>
                             </li>
                             <li class="active">تایید سبد خرید / پرداخت</li>
                         </ul>
@@ -29,10 +30,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <!--=======  page wrapper  =======-->
                 <div class="page-wrapper">
                     <div class="page-content-wrapper">
-                        <form action="#">
+                        <form method="post">
                             <div class="cart-table table-responsive">
                                 <table class="table">
                                     <thead>
@@ -42,65 +42,77 @@
                                             <th class="pro-title">قیمت واحد</th>
                                             <th class="pro-price">تعداد</th>
                                             <th class="pro-quantity">مبلغ کل بدون تخفیف</th>
-                                            <th class="pro-quantity">درصد تخفیف</th>
+                                            <th class="pro-subtotal">درصد تخفیف</th>
                                             <th class="pro-subtotal">مبلغ کل تخفیف</th>
                                             <th class="pro-remove">مبلغ پس از تخفیف</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                    @foreach (var item in Model.Cart.Items)
-                                    {
-                                        <tr>
-                                            <td class="pro-thumbnail">
-                                                <a>
-                                                    <img src="~/ProductPictures/@item.Picture" class="img-fluid"
-                                                         alt="@item.Name">
-                                                </a>
-                                            </td>
-                                            <td class="pro-title">
-                                                <a>@item.Name</a>
-                                            </td>
-                                            <td class="pro-price">
-                                                <span>@item.UnitPrice.ToMoney() تومان</span>
-                                            </td>
-                                            <td class="pro-price">
-                                                <span>@item.Count عدد</span>
-                                            </td>
-                                            <td class="pro-subtotal">
-                                                <span>@item.TotalItemPrice.ToMoney() تومان</span>
-                                            </td>
-                                            <td class="pro-subtotal">
-                                                <span>@item.DiscountRate %</span>
-                                            </td>
-                                            <td class="pro-subtotal">
-                                                <span>@item.DiscouontAmmunt.ToMoney() تومان</span>
-                                            </td>
-                                            <td class="pro-subtotal">
-                                                <span>@item.ItemPayAmount.ToMoney() تومان</span>
-                                            </td>
-                                        </tr>
-                                    }
-                                   
+                                        @foreach (var item in Model.Cart.Items)
+                                        {
+                                            <tr>
+                                                <td class="pro-thumbnail">
+                                                    <a>
+                                                        <img src="~/ProductPictures/@item.Picture" class="img-fluid"
+                                                             alt="@item.Name">
+                                                    </a>
+                                                </td>
+                                                <td class="pro-title">
+                                                    <a>@item.Name</a>
+                                                </td>
+                                                <td class="pro-price">
+                                                    <span>@item.UnitPrice.ToMoney() تومان</span>
+                                                </td>
+                                                <td class="pro-price">
+                                                    <span>@item.Count عدد</span>
+                                                </td>
+                                                <td class="pro-subtotal">
+                                                    <span>@item.TotalItemPrice.ToMoney() تومان</span>
+                                                </td>
+                                                <td class="pro-subtotal">
+                                                    <span>@item.DiscountRate %</span>
+                                                </td>
+                                                <td class="pro-subtotal">
+                                                    <span>@item.DiscouontAmmunt.ToMoney() تومان</span>
+                                                </td>
+                                                <td class="pro-subtotal">
+                                                    <span>@item.ItemPayAmount.ToMoney() تومان</span>
+                                                </td>
+                                            </tr>
+                                        }
                                     </tbody>
                                 </table>
                             </div>
-                        </form>
 
-                        <div class="row">
-                            <div class="col-lg-6 col-12 d-flex">
-                                <div class="cart-summary">
-                                    <div class="cart-summary-wrap">
-                                        <h4>خلاصه وضعیت فاکتور</h4>
-                                        <p>مبلغ نهایی <span>@Model.Cart.TotalAmount.ToMoney() تومان</span></p>
-                                        <p>مبلغ تخفیف <span>@Model.Cart.DiscountAmount.ToMoney() تومان</span></p>
-                                        <h2>مبلغ قابل پرداخت <span>@Model.Cart.PayAmount.ToMoney() تومان</span></h2>
+                            <div class="row">
+                                <div class="col-lg-6 col-12 d-flex">
+                                    <div class="checkout-payment-method">
+                                        <h4>نحوه پرداخت</h4>
+                                        @*@foreach (var method in PaymentMethod.GetList())
+                                        {
+                                            <div class="single-method">
+                                                <input type="radio" id="payment_@method.Id" name="paymentMethod" value="@method.Id" @(PaymentMethod.GetList().First().Id == method.Id ? "checked" : "")>
+                                                <label for="payment_@method.Id">@method.Name</label>
+                                                <p data-method="@method.Id" style="display:@(PaymentMethod.GetList().First().Id == method.Id ? "block" : "none")">@method.Description</p>
+                                            </div>
+                                        }*@
                                     </div>
-                                    <div class="cart-summary-button">
-                                        <button class="checkout-btn">پرداخت</button>
+                                </div>
+                                <div class="col-lg-6 col-12 d-flex">
+                                    <div class="cart-summary">
+                                        <div class="cart-summary-wrap">
+                                            <h4>خلاصه وضعیت فاکتور</h4>
+                                            <p>مبلغ نهایی <span>@Model.Cart.TotalAmount.ToMoney() تومان</span></p>
+                                            <p>مبلغ تخفیف <span>@Model.Cart.DiscountAmount.ToMoney() تومان</span></p>
+                                            <h2>مبلغ قابل پرداخت <span>@Model.Cart.PayAmount.ToMoney() تومان</span></h2>
+                                        </div>
+                                        <div class="cart-summary-button">
+                                            <button asp-page-handler="Pay" class="checkout-btn">پرداخت</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
