تکمیل قسمت مدیریت سفارشات در قسمت ادمین

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Inventory/Reduce.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Inventory/Reduce.cshtml
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label asp-for="Description" class="control-label">تعداد</label>
+                    <label asp-for="Description" class="control-label">توضیحات</label>
                     @*dar jqueery site.js makeslug vojod dare va baese poor shodan khodkare Slug az name mishe*@
                     <textarea rows="3" class="form-control" asp-for="Description"></textarea>
                     <span asp-validation-for="Description" class="error"></span>
