--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_Menu.cshtml
@@ -32,14 +32,18 @@
                 <li>
                     <a asp-page="/Index" class="waves-effect active"><i class="md md-home"></i><span> داشبورد </span></a>
                 </li>
-               
+
                 <li>
                     <a permission="@MenuPermissions.Comments" asp-page="/Comment/Comment/Index" class="waves-effect"><i class="md md-comment"></i><span> کامنت ها </span></a>
                 </li>
                 @if (AuthHelper.CurrentAccountRole() == Roles.Administrator)
                 {
                     <li>
-                        <a permission="@MenuPermissions.Inventory" asp-page="/Inventory/Index" class="waves-effect "><i class="md md-store"></i><span> انبارداری </span></a>
+                        <a permission="@MenuPermissions.Inventory" asp-page="/Inventory/Index" class="waves-effect "><i class="md md-store"></i><span> انبار داری </span></a>
+                    </li>
+
+                    <li>
+                        <a permission="@MenuPermissions.Inventory" asp-page="/Shop/Orders/Index" class="waves-effect "><i class="md md-play-arrow"></i><span> سفارشات </span></a>
                     </li>
                     <li class="has_sub">
                         <a permission="@MenuPermissions.Shop" class="waves-effect"><i class="md md-shop"></i><span> فروشگاه </span><span class="pull-right"><i class="md md-add"></i></span></a>
@@ -60,15 +64,15 @@
                         </ul>
                     </li>
                     <li class="has_sub">
-                        <a  class="waves-effect"><i class="md md-account-box"></i><span> سیستم کاربران </span><span class="pull-right"><i class="md md-add"></i></span></a>
+                        <a class="waves-effect"><i class="md md-account-box"></i><span> سیستم کاربران </span><span class="pull-right"><i class="md md-add"></i></span></a>
                         <ul class="list-unstyled">
                             <li><a asp-page="/Accounts/Account/Index">کاربران</a></li>
                             <li><a asp-page="/Accounts/Role/Index">نقش ها</a></li>
                         </ul>
                     </li>
                 }
-              
-               
+
+
                 <li class="has_sub">
                     <a permission="@MenuPermissions.Blogin" class="waves-effect"><i class="md md-account-box"></i><span> سیستم بلاگینگ </span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
@@ -76,7 +80,7 @@
                         <li><a asp-page="/Blog/ArticleCategories/Index">گروه مقالات</a></li>
                     </ul>
                 </li>
-               
+
                 <li>
                     <a asp-page="/Account" asp-page-handler="logout" class="waves-effect"><i class="fa fa-sign-out"></i><span> خروج </span></a>
                 </li>
