\گزارش گیری یا reportinhg کار با گزارش گیری chart.js اگه اونو سرچ کنی سایت chartjs.org هست که میتونیم از سمپچل های آ« استافده کننیم #############اضافه کردن chart.js به =پروژه 1)ابتدا  cdnjs.com را وارد کنید و با بالا آ»دن سایت chartjsرا سرج کنید و اولین لینکی که میاد رو copt script tag می کنیم و داخل Adminlayout در انتها اضافه میکنیم <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.0.1/chart.min.js" integrity="sha512-tQYZBKe34uzoeOjY9jr3MX7R/mo7n25vnqbnrkskGr4D6YOoPYSpyafUAzQVjV6xAozAqUFIEFsCO4z8mnVBXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
cloudflare.com که آدرس این سایت هست که ی فضای ابری هست که میشه ریسورس ها رو اونجا آپلود کرد و به آن رفرنس داد که کاملا برای بحث سئو پیشنهاد میشه و خیلی کاربردی هست برای مثال اکه ما بخوایهم پارامتر های سئو سایت رو اندازه گیری کنیم داخل سایت gtmetrix.com یکی از پارامترهای اندازه گیری برای سئو استفادهاز همین سایت هست . https://cdnjs.cloudflare.com  و cdnjsهم قسمتی از اون که چارت ها هم داخل  اون هست.

بعد از اون برای استفاده از اون جارت باید بگیم که در این فرم اجرا بشه (Index)  که اطلاعات گزارش ها باید قالب js خاص داشته باشند که در واقع دیتای ما هست که باید به این گونه باشه .

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -370,7 +370,7 @@
 
     <script src="~/AdminTheme/assets/js/persian-date.min.js"></script>
     <script src="~/AdminTheme/assets/js/persian-datepicker.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 
 
 
@@ -382,13 +382,13 @@
     //کلاس های که
     //PersianDateInput
     //رو داردند
-    $('.PersianDateInput').PersianDatepicker({
-       
-        format: 'YYYY/MM/DD',
-        changeYear: true,
-        changeMonth:true,
-        autoClose:true
-    });
+   
+    $('.PersianDateInput').persianDatepicker({
+            format: 'YYYY/MM/DD',
+            autoClose: true,
+            initialValueType: "persian"
+        });
+
 </script>
 
 <script src="https://cdn.tiny.cloud/1/vz9p79f9kgu1dasq0269ociv23vs5a0lvub0qq3905ztwecx/tinymce/6/tinymce.min.js" 
