--- a/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Accounts/Account/Create.cshtml
@@ -28,7 +28,7 @@
                                 <span asp-validation-for="Command.Username" class="error"></span>
                             </div>
                         </div>
-                        
+
                     </div>
                     <div class="row">
                         <div class="col-md-6">
@@ -68,8 +68,8 @@
                         </div>
                     </div>
 
-                    <button type="submit" class="btn btn-success waves-effect waves-light m-b-5">ایجاد</button>
-                    <a asp-page="./Index" class="btn btn-dark waves-effect waves-light m-b-5">بازگشت</a>
+                    <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">بستن</button>
+                    <button type="submit" class="btn btn-info waves-effect waves-light">ایجاد</button>
                 </form>
             </div>
         </div>
