--- a/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Shared/_AdminLayout.cshtml
@@ -384,26 +384,28 @@
     //رو داردند
    
     $('.PersianDateInput').persianDatepicker({
-            format: 'YYYY/MM/DD',
-            autoClose: true,
-            initialValueType: "persian"
-        });
+        format: 'YYYY/MM/DD',
+        autoClose: true,
+        initialValueType: "persian"
+    });
 
 </script>
 
 <script src="https://cdn.tiny.cloud/1/vz9p79f9kgu1dasq0269ociv23vs5a0lvub0qq3905ztwecx/tinymce/6/tinymce.min.js" 
-        referrerpolicy="origin"></script>
+        referrerpolicy="origin">
+
+</script>
   <script>
       tinymce.init({
           //می گیم که مدام آی دی بشه تکست ادیتور
-        selector: '#BodyContent',
-        plugins: 'a11ychecker advcode casechange export formatpainter image editimage linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tableofcontents tinycomments tinymcespellchecker',
-        toolbar: 'a11ycheck addcomment showcomments casechange checklist code export formatpainter image editimage pageembed permanentpen table tableofcontents',
-        toolbar_mode: 'floating',
-        tinycomments_mode: 'embedded',
-        tinycomments_author: 'Author name',
-    });
- </script>
+          selector: '#BodyContent',
+          plugins: 'a11ychecker advcode casechange export formatpainter image editimage linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tableofcontents tinycomments tinymcespellchecker',
+          toolbar: 'a11ycheck addcomment showcomments casechange checklist code export formatpainter image editimage pageembed permanentpen table tableofcontents',
+          toolbar_mode: 'floating',
+          tinycomments_mode: 'embedded',
+          tinycomments_author: 'Author name',
+      });
+  </script>
 
 </body>
 </html>
