ساخت پیج کارت برای اینکار نیاز است که اطلاعات کوکی که آیتم های خرید اری شده کاربر می باشد که دااخل کوکی وجود دارد را داخل ریزور پیج بیاریم برای اینکار باید ابتدا آنهارا سریالایزر کنیم تا بتونمی به اونها دسترسی داشته باشیم . برای اینکار باید این کلاس JavaScriptSerializer(); رو اضافه کنیم که حتما باید از نیم اسپیس using Nancy.Json; استفاد کرده باشیم.

--- a/LampShade/ServiceHost/Areas/Administration/Pages/Blog/Articles/Create.cshtml
+++ b/LampShade/ServiceHost/Areas/Administration/Pages/Blog/Articles/Create.cshtml
@@ -45,12 +45,13 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="form-group">
-                                <label asp-for="Command.CategoryId">گروه مقاله</label>
-                                <select class="form-control" asp-for="Command.CategoryId" asp-items="Model.ArticleCategories">
-                                    <option value="0">گروه مقاله ...</option>
-                                </select>
-                            </div>
+                           
+                            <label asp-for="Command.CategoryId">گروه محصول  <span id="requierd-validate">*</span></label>
+                            <select id="select-Category" asp-for="Command.CategoryId" asp-items="Model.ArticleCategories">
+                                <option value="0">انتخاب گروه</option>
+                            </select>
+                            <span asp-validation-for="Command.CategoryId" class="error"></span>
+
                         </div>
                     </div>
                     <div class="row">
